# structured-data-extractor

./: .env.example  .gitignore  README.md  pyproject.toml
data/ground_truth/: verified.jsonl
src/extractor/: __init__.py  evaluate.py  extract.py  normalize.py  predict.py  schemas.py  sroie.py
tests/: test_normalize.py  test_schemas.py
