[project]
name = "structured-data-extractor"
version = "0.1.0"
description = "Turn messy documents into validated, typed JSON, with measured accuracy and cost."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Uguudei Bayar", email = "uguudei.bayar@gmail.com" }]
dependencies = [
    "anthropic>=0.116.0",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
